@@ -1,3 +1,4 @@
+<%= turbo_stream_from :connector_check %>
 <%= turbo_stream_from @connector %>
 <div class="card mb-3" id="<%= dom_id(@connector) %>">
   <div class="card-header">
